@@ -10,6 +10,7 @@
 - netcache: fix spartan protocol error
 - opnk: fix a crash when caching returns None
 - ansicat: remove the treshold argument when launching chafa (strange artifacts with new version)
+- netcache: moved the certificate cache to the filesystem instead of a database (by Bert Livens)
 
 ## 2.2 - February 13th 2023
 - cache folder is now configurable through $OFFPUNK_CACHE_PATH environment variable (by prx)
